Updated body overflow to fix scroll caused by banner

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
   width: 100%;
   font-family: Roboto;
   font-weight: 400;
+  overflow-x: hidden;
 }
 
 .rotate {
